# FEH_Robot_Team_C2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  FEHProteus.cpp  FEHProteus.h  Makefile  README  README.md  Readme.txt  _DS_Store  main.cpp  toolchain.cmake
CMSIS/: MK60D10.h  core_cm4.h
Doc/: DoxygenLayout.xml  custom.css  doxygen_css.css  header.html  index.md  proteus.md  vscode.md
Doc/Examples/: HelloWorld.md  Touch.md
Drivers/: FEHPropeller.cpp  FEHPropeller.h  FEHProteus.h  FEHXBee.cpp  FEHXBee.h  SDHC.cpp  SDHC.h  adc16.cpp  diskio.h  exception_handler.cpp  exception_handler.s  ff.cpp  ff.h  ffconf.h  i2c.cpp  i2c.h  lptmr.cpp  lptmr.h  mcg.cpp  mcg.h  spi.cpp  spi.h  uart.cpp  uart.h
FreeRTOS/: FreeRTOSConfig.h
Libraries/: FEHAccel.cpp  FEHAccel.h  FEHBattery.cpp  FEHBattery.h  FEHBuzzer.cpp  FEHBuzzer.h  FEHFile.cpp  FEHFile.h  FEHIO.cpp  FEHIO.h  FEHLCD.cpp  FEHLCD.h  FEHMOM.cpp  FEHMOM.h  FEHMotor.cpp  FEHMotor.h  FEHRCS.cpp  FEHRCS.h  FEHRPS.cpp  FEHRPS.h  FEHRandom.cpp  FEHRandom.h  FEHSD.cpp  FEHSD.h  FEHServo.cpp  FEHServo.h  FEHUtility.cpp  FEHUtility.h  FEHWONKA.cpp  FEHWONKA.h  FastLCD.cpp  FastLCD.h  LCDColors.h  _DS_Store  image.h
Linker/: MK60DN512Z_flash.ld
NXP_SDK/: MK60D10.h  fsl_device_registers.h  fsl_port.h  peripherals.c  peripherals.h  pin_mux.c
Startup/: _DS_Store  __arm_start.cpp  derivative.h  kinetis_sysinit.cpp  startup_mk60d10.cpp
Tools/: ImageEncoder.out  RunLengthEncode.cpp  copyS19  copyS19.bat  egrep  image.h  raw_image.h  sizeGet  sizeGet.bat
